--- a/factorials-container/CMakeLists.txt
+++ b/factorials-container/CMakeLists.txt
@@ -1,19 +1,41 @@
 cmake_minimum_required(VERSION 3.10)
-project(FactorialsContainer)
+project(FactorialsContainer LANGUAGES CXX)
 
+# Налаштування стандарту C++ та опцій компілятора
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Подключаем GoogleTest
+# Опція для відлагодження (вимкнути для release)
+add_compile_options(-Wall -Wextra -Werror)
+
+# Підключення GoogleTest через FetchContent
 include(FetchContent)
 FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/refs/heads/main.zip
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG release-1.12.1
 )
 FetchContent_MakeAvailable(googletest)
 
-# Основная библиотека
-add_library(Factorials src/Factorials.cpp include/Factorials.h)
+# Основна бібліотека
+add_library(Factorials 
+  include/Factorials.h
+  src/Factorials.cpp
+)
 
-# Тесты
+# Тести
 add_executable(FactorialsTest tests/FactorialsTest.cpp)
-target_link_libraries(FactorialsTest GTest::GTest GTest::Main Factorials)
+target_link_libraries(FactorialsTest 
+  PRIVATE 
+    Factorials
+    GTest::GTest 
+    GTest::Main
+)
+
+# Додаткові цілі для зручності
+add_custom_target(run_tests 
+  COMMAND ./FactorialsTest
+  DEPENDS FactorialsTest
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
